--- a/springboot/src/main/resources/templates/index.html
+++ b/springboot/src/main/resources/templates/index.html
@@ -5,9 +5,22 @@
     <title>index</title>
 </head>
 <body>
-    <h2>Hello Spring boot!!</h2>
+    <h2>회원 프로젝트</h2>
     <a href="/member/save">회원가입</a>
     <a href="/member/login">로그인</a>
     <a href="/member/">회원목록</a>
+
+    <h2>게시판 프로젝트</h2>
+    <button onclick="saveReq()">글 작성</button>
+    <button onclick="listReq()">글 목록</button>
 </body>
+<script>
+    const saveReq = () => {
+        location.href = "/board/save";
+    }
+
+    const listReq = () => {
+        location.href = "/board/";
+    }
+</script>
 </html>
