--- a/springboot/src/main/resources/templates/board/detail.html
+++ b/springboot/src/main/resources/templates/board/detail.html
@@ -37,7 +37,7 @@
 </body>
 <script th:inline="javascript">
     const listReq = () => {
-        location.href = "/board/";
+        location.href = "/board/paging?page=" + [[${page}]];
     };
 
     const updateReq = () => {
