--- a/springboot/src/main/resources/templates/index.html
+++ b/springboot/src/main/resources/templates/index.html
@@ -13,6 +13,7 @@
     <h2>게시판 프로젝트</h2>
     <button onclick="saveReq()">글 작성</button>
     <button onclick="listReq()">글 목록</button>
+    <button onclick="pagingReq()">페이징목록</button>
 </body>
 <script>
     const saveReq = () => {
@@ -21,6 +22,10 @@
 
     const listReq = () => {
         location.href = "/board/";
+    }
+
+    const pagingReq = () => {
+        location.href = "/board/paging";
     }
 </script>
 </html>
