--- a/springboot/src/main/resources/templates/board/detail.html
+++ b/springboot/src/main/resources/templates/board/detail.html
@@ -30,6 +30,11 @@
         <th>내용</th>
         <td th:text="${board.boardContents}"></td>
     </tr>
+    <tr th:if="${board.fileAttached == 1}">
+        <td th:each="fileName: ${board.storedFileName}">
+            <img th:src="@{|/upload/${fileName}|}"><br>
+        </td>
+    </tr>
 </table>
 <button onclick="listReq()">목록</button>
 <button onclick="updateReq()">수정</button>
