--- a/springboot/src/main/resources/templates/board/detail.html
+++ b/springboot/src/main/resources/templates/board/detail.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>BoardDetail</title>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 </head>
 <body>
 <table>
@@ -39,6 +40,32 @@
 <button onclick="listReq()">목록</button>
 <button onclick="updateReq()">수정</button>
 <button onclick="deleteReq()">삭제</button>
+
+<!--댓글 작성 부분-->
+<div id="comment-write">
+    <input type="text" id="commentWriter" placeholder="작성자">
+    <input type="text" id="commentContents" placeholder="내용">
+    <button id="comment-write-btn" onclick="commentWrite()">댓글 작성</button>
+</div>
+
+<!--댓글 출력 부분-->
+<div id="comment-list">
+    <table>
+        <tr>
+            <th>댓글번호</th>
+            <th>작성자</th>
+            <th>내용</th>
+            <th>작성시간</th>
+        </tr>
+        <tr th:each="comment: ${commentList}">
+            <td th:text="${comment.id}"></td>
+            <td th:text="${comment.commentWriter}"></td>
+            <td th:text="${comment.commentContents}"></td>
+            <td th:text="${comment.commentCreatedTime}"></td>
+        </tr>
+    </table>
+</div>
+
 </body>
 <script th:inline="javascript">
     const listReq = () => {
@@ -52,6 +79,52 @@
     const deleteReq = () => {
         const id = [[${board.id}]];
         location.href = "/board/delete/" + id;
+    };
+
+    const commentWrite = () => {
+        const writer = $('#commentWriter').val();
+        const contents = $('#commentContents').val();
+        const id = [[${board.id}]];
+        console.log("작성자: " + writer);
+        console.log("내용: " + contents);
+        console.log("게시글 번호: " + id);
+        $.ajax({
+            // 요청방식 : post, 요청 주소: comment/save, 요청 데이터: 작성자, 내용, 게시글번호
+            type: "post",
+            url: "/comment/save",
+            data: {
+                "commentWriter": writer,
+                "commentContents": contents,
+                "boardId": id
+            },
+            success: function (res) {
+                console.log("요청 성공", res);
+                let output = "<table>";
+                output += "<tr><th>댓글번호</th>";
+                output += "<th>작성자</th>";
+                output += "<th>내용</th>"
+                output += "<th>작성시간</th></tr>";
+                for (let i in res) {
+                    console.log("댓글번호: "+res[i].id)
+                    console.log("작성자: " + res[i].commentWriter);
+                    console.log("내용: " + res[i].commentContents);
+                    console.log("작성시간: " + res[i].commentCreatedTime);
+                    output += "<tr>";
+                    output += "<td>" + res[i].id + "</td>";
+                    output += "<td>" + res[i].commentWriter + "</td>";
+                    output += "<td>" + res[i].commentContents + "</td>";
+                    output += "<td>" + res[i].commentCreatedTime + "</td>";
+                    output += "</tr>";
+                }
+                output += "</table>";
+                $("#comment-list").html(output);
+                $("#commentWriter").val('');
+                $("#commentContents").val('');
+            },
+            error: function (err) {
+                console.log("요청 실패", err);
+            }
+        });
     };
 </script>
 </html>
